--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "ins_data = pd.read_csv('data/insurance.csv')\n",
+    "ins_data = pd.read_csv('data_for_lm/insurance.csv')\n",
     "ins_data.head()"
    ]
   },
