add some structure to pandas hw

--- a/hw_pandas.ipynb
+++ b/hw_pandas.ipynb
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reads_data_part.to_csv('train_part.csv')"
+    "reads_data_part.to_csv('data/train_part.csv')"
    ]
   },
   {
