Create dota2 pro matches database

--- a/notebooks/dota_data_miner.ipynb
+++ b/notebooks/dota_data_miner.ipynb
@@ -1660,14 +1660,14 @@
     "    time.sleep(2)\n",
     "    match_details = api.get_match_info(recent_match['match_id'])\n",
     "    dota_data.get_all_current_match_tables(match_details)\n",
-    "#     Get previous matches for all players with valid account ids\n",
-    "#     players_with_account = data.players[data.players['account_id'] > 0]\n",
-    "#     for i, player in players_with_account.iterrows():\n",
-    "#         time.sleep(sleep_time)\n",
-    "#         full_match_history = api.get_player_matches_history(player['account_id'])\n",
-    "#         if full_match_history:\n",
-    "#             data.get_previous_matches(match_details['match_id'], player['account_id'],\n",
-    "#             full_match_history, match_details['start_time'])"
+    "    Get previous matches for all players with valid account ids\n",
+    "    players_with_account = data.players[data.players['account_id'] > 0]\n",
+    "    for i, player in players_with_account.iterrows():\n",
+    "        time.sleep(sleep_time)\n",
+    "        full_match_history = api.get_player_matches_history(player['account_id'])\n",
+    "        if full_match_history:\n",
+    "            data.get_previous_matches(match_details['match_id'], player['account_id'],\n",
+    "            full_match_history, match_details['start_time'])"
    ]
   },
   {
@@ -1683,17 +1683,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"../data/heroes.json\") as file:\n",
+    "    heroes_id = json.load(file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = []\n",
+    "ids = []\n",
+    "for ent in heroes_id[\"heroes\"]:\n",
+    "    names.append(ent[\"name\"])\n",
+    "    ids.append(ent[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({\"name\": names, \"id\": ids}).to_csv(\"../data/names_to_ids.tsv\", sep=\"\\t\")"
+   ]
   },
   {
    "cell_type": "code",
