--- a/notebooks/database_creation.ipynb
+++ b/notebooks/database_creation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creation of a database of DPTA 2 professional matches"
+    "## Creation of a database of DOTA 2 professional matches"
    ]
   },
   {
